--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -19,14 +19,17 @@
                     <li ng-repeat="item in menu" ng-class="{active: isActive(item.link)}">
                         <a ng-href="{{item.link}}">{{item.title}}</a>
                     </li>
-                    <li class="dropdown"><a class="dropdown-toggle">Applicants</a>
+<!--
+                    <li class="dropdown"><a href="#" class="dropdown-toggle">Applicants</a>
                         <ul class="dropdown-menu">
+-->
                             <li><a class="dropdown-option" href="data/Applicant/new">New</a></li>
                             <li><a class="dropdown-option" href="data/Applicant">Listing</a></li>
                             <li><a class="dropdown-option" href="data/analyse/Applicant">Basic Report</a></li>
-                        </ul>
+<!--                        </ul>-->
                     </li>
                     <li ng-show="isAdmin()" ng-class="{active: isActive('/admin')}"><a href="/admin">Admin</a></li>
+<!--
                     <li ng-show="items.length > 0" class="dropdown">
                         <a class="dropdown-toggle">
                             {{contextMenu}}
@@ -37,6 +40,7 @@
                             </li>
                         </ul>
                     </li>
+-->
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     
