--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -9,7 +9,7 @@
             </button>
             <div class="pull-left">
                 <a class="navbar-brandpluslogo brandpluslogo" href="/">
-                    <a href="/" class="navbar-brand">{{site.name}}</a>
+                    <a href="/welcome" class="navbar-brand">{{site.name}}</a>
                 </a>
             </div>
 <!--            <div class="visible-lg visible-desktop pull-right col-md-1 span1"></div>-->
